--- a/style.css
+++ b/style.css
@@ -60,10 +60,10 @@ body {}
   color: white;
 }
 
-/*.extras {
+.extras {
 	background-color: #333333;
-	padding-bottom: 10px;
-	padding-top: 10px;
+	padding-bottom: 25px;
+	padding-top: 25px;
 }
 .extras h2 {
 	text-align: center;
@@ -71,7 +71,11 @@ body {}
 }
 .extras img {
 	width: inherit;
-}*/
+	width: 80%;
+	display: block;
+	margin-left: auto;
+  margin-right: auto;
+}
 
 .notice {
 	color: #333333;
@@ -81,12 +85,6 @@ body {}
 }
 .notice .left {
 	text-align: left;
-}
-.notice .mid {
-	text-align: center;
-}
-.notice .mid img {
-	width: inherit;
 }
 .notice .right {
 	text-align: right;
